--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "node main.js",
+    "start": "nodemon main.js",
     "debug": "node --inspect main.js"
   },
   "author": "gaoxiaoliangz",
